Upgrade to Generics fix